--- a/notebooks/Example 1 - Train Test Split.ipynb
+++ b/notebooks/Example 1 - Train Test Split.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "bbec6f59",
+   "id": "8079b3e3",
    "metadata": {},
    "source": [
     "# Train Test Split\n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6a5d56d6",
+   "id": "4e4606ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0006f9e",
+   "id": "d6486068",
    "metadata": {},
    "source": [
     "## Read the CSV file as a Data Frame"
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6b6d55c4",
+   "id": "33143c56",
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "838800df",
+   "id": "60e1d7e8",
    "metadata": {},
    "source": [
     "### Extracting a sub-data frame based on specific columns\n",
@@ -416,7 +416,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "076759f4",
+   "id": "38493d8f",
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b0fd165",
+   "id": "2c3fc561",
    "metadata": {},
    "source": [
     "### Basic Filtering\n",
@@ -572,7 +572,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "39687b38",
+   "id": "4ea33997",
    "metadata": {},
    "outputs": [
     {
@@ -947,7 +947,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09e39e65",
+   "id": "2fe4a7e0",
    "metadata": {},
    "source": [
     "## Extracting Data"
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f68f0a9b",
+   "id": "dbc59a7e",
    "metadata": {},
    "source": [
     "### Split Data into `x` (data without labels) and `y` (labels)\n",
@@ -966,7 +966,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ba746e30",
+   "id": "23269683",
    "metadata": {},
    "outputs": [
     {
@@ -1328,7 +1328,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "93af2a6c",
+   "id": "9fef3cc2",
    "metadata": {},
    "outputs": [
     {
@@ -1473,7 +1473,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bb5d210",
+   "id": "f9d2920f",
    "metadata": {},
    "source": [
     "### Perform Train Test Split where `ratio` is the size of our training\n",
@@ -1484,7 +1484,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "507f9d8d",
+   "id": "6978294f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1496,7 +1496,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c0397b5",
+   "id": "e59ab5e4",
    "metadata": {},
    "source": [
     "### Save Train Test Output as CSV Files\n",
@@ -1507,7 +1507,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "777c1fe4",
+   "id": "b9451999",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1519,8 +1519,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "id": "370abb77",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       1\n",
+       "1       2\n",
+       "2       2\n",
+       "3       2\n",
+       "4       1\n",
+       "       ..\n",
+       "1995    0\n",
+       "1996    2\n",
+       "1997    3\n",
+       "1998    0\n",
+       "1999    3\n",
+       "Name: price_range, Length: 2000, dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[:,-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "0acc358d",
+   "id": "945d3585",
    "metadata": {},
    "outputs": [],
    "source": []
